# multi-gpu-reduce

./: CMakeLists.txt  README.md  multi-gpu-reduce.cu
